downgrade expedition microservice to java 8 spring boot 2 to use ribbon